feat: add endpoint to get contract addresses and make some of the methods private
