# models/models.gen.go
@@ -1,7 +1,11 @@
 // Package models provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package models
+
+const (
+	BasicAuthScopes = "basicAuth.Scopes"
+)
 
 // Defines values for TransactionType.
 const (
@@ -44,6 +48,11 @@ type ContractStatsResponse struct {
 	Address           Address   `json:"address"`
 	CreationDate      Timestamp `json:"creationDate"`
 	TransactionsCount Counter   `json:"transactionsCount"`
+}
+
+// ContractsResponse defines model for ContractsResponse.
+type ContractsResponse struct {
+	Contracts []Address `json:"contracts"`
 }
 
 // CountResponse defines model for CountResponse.
